Project

General

Profile

Actions

Bug #19372

closed

Proc objects are not traversed for shareable check during Ractor.make_shareable(prok)

Bug #19372: Proc objects are not traversed for shareable check during Ractor.make_shareable(prok)

Added by luke-gru (Luke Gruber) over 3 years ago. Updated over 1 year ago.


Description

class Proc
  attr_accessor :obj1
  def initialize
    @obj1 = Object.new
  end
end

p = true.instance_eval { Proc.new { puts "hi" } }
Ractor.make_shareable(p)
p "Obj1 frozen?", Ractor.shareable?(p.obj1)
P = p

r = Ractor.new do
  pp = P
  p pp.obj1 # gives error in debug builds (rb_ractor_confirm_belonging rb_bug() call)
end

Updated by luke-gru (Luke Gruber) over 3 years ago Actions #1 [ruby-core:111993]

A separate but related issue is that the proc objects are not frozen too, so their ivars can be (re)assigned. I don't know how big an issue that is because
other ractors cannot read/write the ivars but IMO the proc should be frozen.

Updated by luke-gru (Luke Gruber) over 3 years ago Actions #3 [ruby-core:112020]

No I don't think so, that change would just make it so that obj.freeze has the effect of making obj shareable for that class. However, prok.freeze should never make
procs shareable, they need to go through the isolation check.

Updated by hsbt (Hiroshi SHIBATA) over 3 years ago Actions #5 [ruby-core:112253]

  • Status changed from Open to Assigned
  • Assignee set to ko1 (Koichi Sasada)

Updated by luke-gru (Luke Gruber) over 1 year ago Actions #6

  • Status changed from Assigned to Closed

Applied in changeset git|d80f3a287c5c8d0404b6cb837db360cab320cde1.


Ractor.make_shareable(proc_obj) makes inner structure shareable

Proc objects are now traversed like other objects when making them
shareable.

Fixes [Bug #19372]
Fixes [Bug #19374]

Actions

Also available in: PDF Atom